translation que setup
